Correccion y estrucrura del formulario

--- a/index.html
+++ b/index.html
@@ -8,31 +8,40 @@
 <body>
 	<center><u><font color="purple"><h1>Formulario para la deteccion de ansiedad</h1></font></u></center>
 
-	<form>
-		<label for="1">1.- ¿Sueles tener hiperactividad al estar esperando algo?(Mover mucho un pie o ambos por ejemplo)</label><br>
-		<input type="radio" name="1">Si
-		<input type="radio" name="1">No<br>
-		<label for="2">2.- ¿Sueles jugar mucho con tu cabello de manera inconciente?</label><br>
-		<input type="radio" name="2">Si
-		<input type="radio" name="2">No<br>
-		<label for="3">3.- ¿Sueles morder y comerte las uñas?</label><br>
-		<input type="radio" name="3">Si
-		<input type="radio" name="3">No<br>
-		<label for="4">4.- ¿Sueles sentir aceleracion en tu manera de respirar al estar nervioso?</label><br>
-		<input type="radio" name="4">Si
-		<input type="radio" name="4">No<br>
-		<label for="5">5.- ¿Sientes malestar estomacal al sentirte nervioso o con miedo?</label><br>
-		<input type="radio" name="5">Si
-		<input type="radio" name="5">No<br>
-		<label for="name">Nombre: </label><br>
-		<input type="text" name="name" placeholder="Ingrese tu nombre"><br>
-		<label for="Apellidos">Apellidos: </label><br>
-		<input type="text" name="Apellidos" placeholder="Ingresa tus Apellidos"><br>
-		<label for="Mail">Correo electronico: </label><br>
-		<input type="text" name="Mail" placeholder="Lolsito@lol.com"><br>
-		<label for="number">Numero telefonico: </label><br>
-		<input type="number" name="name" placeholder="2220192381"><br>
-		<input type="submit" name="Evaluar">
-	</form>
+	<center>
+		<form>
+			<label style="font-size:110%;">Contesta las siguientes preguntas de manera sincera.</label>
+			<p></p>
+			<label for="1" style="font-size:115%;"><b>1.- ¿Sueles tener hiperactividad al estar esperando algo?(Mover mucho un pie o ambos por ejemplo)</b></label><br>
+			<input type="radio" name="1">Si
+			<input type="radio" name="1">No<br>
+			<label for="2" style="font-size:115%;"><b>2.- ¿Sueles jugar mucho con tu cabello de manera inconciente?</b></label><br>
+			<input type="radio" name="2">Si
+			<input type="radio" name="2">No<br>
+			<label for="3" style="font-size:115%;"><b>3.- ¿Sueles morder y comerte las uñas?</b></label><br>
+			<input type="radio" name="3">Si
+			<input type="radio" name="3">No<br>
+			<label for="4" style="font-size:115%;"><b>4.- ¿Sueles sentir aceleracion en tu manera de respirar al estar nervioso?</b></label><br>
+			<input type="radio" name="4">Si
+			<input type="radio" name="4">No<br>
+			<label for="5" style="font-size:115%;"><b>5.- ¿Sientes malestar estomacal al sentirte nervioso o con miedo?</b></label><br>
+			<input type="radio" name="5">Si
+			<input type="radio" name="5">No<br>
+			<br></br>
+			<label style="font-size:115%;"><b>Datos del Estudiante</b></label>
+			<br></br>
+			<label for="name">Nombre: </label><br>
+			<input type="text" name="name" placeholder="Ingrese su nombre"><br>
+			<label for="Apellidos">Apellidos: </label><br>
+			<input type="text" name="Apellidos" placeholder="Ingresa tus Apellidos"><br>
+			<label for="Mail">Correo electronico: </label><br>
+			<input type="text" name="Mail" placeholder="Ingresa tu correo electronico"><br>
+			<label for="number">N&uacute;mero telefonico: </label><br>
+			<input type="number" name="name" placeholder="Ingrese su n&uacute;mero de control"><br>
+			<p></p>
+			<input type="submit" name="Evaluar" value="Evaluar">
+			<input type="reset" name="Reset" value="Cancelar">
+		</form>
+	</center>
 </body>
 </html>
