diseno y estilo de la pagina

--- a/index.html
+++ b/index.html
@@ -4,8 +4,34 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Formulario para detectar la ansiedad</title>
+	<div style="text-align: center; background-color: #e6ffff;">
+		<br><br><br>
+			<table style="width: 100%;">
+				<th style="width: 40%" >
+					<img src="LOGOTIPO FLORECER.png" alt="foto" width=30%>
+				</th>
+				<center>
+					<th style="text-align: center; width: 40% text">
+				</th>
+				</center>
+				<th style="width: 40%">
+					<img src="LOGOTIPO FLORECER.png" alt="imagen" width=30%>
+				</th>
+			</tr>
+		</table>
+			
+		<br><br><br>
+	</div>
+
 </head>
+<style>
+	body{
+		background-image: url("FONDO COLORES.png");
+	}
+</style>>
 <body>
+
+	
 	<center><u><font color="purple"><h1>Formulario para la deteccion de ansiedad</h1></font></u></center>
 
 	<center>
